--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Web Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Welcome to My Web Page</h1>
+    <p>This is a simple web page with HTML, CSS, and JavaScript.</p>
+    <button id="myButton">Click Me</button>
+    <p id="message"></p>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
